--- a/app/views/propcott/draft.html
+++ b/app/views/propcott/draft.html
@@ -1,6 +1,6 @@
 {% extends '../base.html' %}
 
-{% block title %}propcott.title{% endblock %}
+{% block title %}{{ propcott.title }}{% endblock %}
 
 {% block body.end %}
 	{% parent %}
