--- a/app/views/static/contact.html
+++ b/app/views/static/contact.html
@@ -1,6 +1,6 @@
 {% extends '../base.html' %}
 
-{% block content %}
+{% block title %}Contact Propcott{% endblock %}
 
 {% block head.end %}
 	{% parent %}
