--- a/app/views/auth/login.html
+++ b/app/views/auth/login.html
@@ -1,5 +1,7 @@
 {% extends '../base.html' %}
 
+{% block title %}Login or Signup{% endblock %}
+
 {% block head.end %}
 	{% parent %}
 	<script src='https://www.google.com/recaptcha/api.js'></script>
