--- a/app/views/static/about.html
+++ b/app/views/static/about.html
@@ -1,5 +1,7 @@
 {% extends '../base.html' %}
 
+{% block title %}About Propcott{% endblock %}
+
 {% block content %}
 <div class="container">
 	<h1>About <small>Propcott</small></h1>
