--- a/app/views/static/help.html
+++ b/app/views/static/help.html
@@ -1,5 +1,7 @@
 {% extends '../base.html' %}
 
+{% block title %}Help &amp; Tips{% endblock %}
+
 {% block content %}
 <div class="container">
 <h1>Help</h1>
