--- a/app/views/static/privacy.html
+++ b/app/views/static/privacy.html
@@ -1,5 +1,7 @@
 {% extends '../base.html' %}
 
+{% block title %}Privacy Policy{% endblock %}
+
 {% block content %}
 <div class="container">
 	<h1>Privacy <small>Policy</small></h1>
