--- a/app/views/static/terms.html
+++ b/app/views/static/terms.html
@@ -1,5 +1,7 @@
 {% extends '../base.html' %}
 
+{% block title %}Terms and Conditions{% endblock %}
+
 {% block content %}
 <div class="container">
 	<h1>Web Site Terms and Conditions of Use</h1>
