--- a/app/views/propcott/preview.html
+++ b/app/views/propcott/preview.html
@@ -12,6 +12,7 @@
 {% endblock %}
 
 {% block content %}
+{% autoescape false %}
 <div class="navigation" style="background-color: #397DD8; color: #ffffff;" data-sticky="0">
 	<div class="container">
 		<a class="block round navigation-item" href="/editor/delete" onclick="return confirm('Are you sure you want to delete this propcott?');">
@@ -47,7 +48,7 @@
 					<hr />
 
 					<h2 class="headline">Why</h2>
-					<div style="margin: 0 1em;">{% autoescape false %}{{ propcott.why }}{% endautoescape %}</div>
+					<div style="margin: 0 1em;">{{ propcott.why }}</div>
 				</div>
 			</div>
 		</div>
@@ -87,4 +88,5 @@
 		</div>
 	</div>
 </div>
+{% endautoescape %}
 {% endblock %}
