--- a/app/views/account/general.html
+++ b/app/views/account/general.html
@@ -16,7 +16,7 @@
 	</tr>
 	<tr>
 		<th>Display Name</th>
-		<td><input type="text" name="display_name" value="{{ user.displayName }}"></td>
+		<td><input type="text" name="display_name" value="{{ user.display_name }}"></td>
 	</tr>
 	<tr>
 		<th>Email address</th>
