--- a/app/views/base.html
+++ b/app/views/base.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{% autoescape false %}<!DOCTYPE html>
 <html lang="en">
 <head>
 	{% block head.start %}{% endblock %}
@@ -611,4 +611,4 @@
 	</div>
 	{% block body.end %}{% endblock %}
 </body>
-</html>
+</html>{% endautoescape %}
