Update about page

--- a/app/views/static/about.html
+++ b/app/views/static/about.html
@@ -3,15 +3,68 @@
 {% block title %}About Propcott{% endblock %}
 
 {% block content %}
-<div class="container">
-	<h1>About <small>Propcott</small></h1>
+<div class="container" style="margin-top: 1em;">
+	<div class="row">
+		<div class="col-12" style="vertical-align: top;">
+			<div style="border-radius: 10px; padding: 1em; margin-bottom: 1em; background: white;">
+<h1>About</h1>
 
-	<p>Social activism has been the optimal choice for counteracting wrongs that occur in society. Since its beginnings, social activism has manifested into various forms. One of which, is the widespread and commonly known method of boycotting. However, the practical application of boycotting has deviated from what boycotting truly is. As history progressed, somewhere along the way we lost sight of its essence. To boycott, is to combine in abstaining from, or preventing dealings with, a person, organization or even a country. Boycotting went from rallying in unison on Main Street, to merely declaring one’s discontent, and now, just hashtags. Without action, talk can only take us so far. That is where the problem lies. All of aforementioned have resulted in the diminishing of one of our greatest tools that contributed to the vast disconnect for collective action. In order to restore this effective tool to unify the masses in consolidated efforts, we must reinvent boycotts by retaining its fundamental actions and combining these actions with the technological resources presently available. Propcott is the reinvention of the boycotting.</p>
-	
-	<p>In this rapidly changing world, the way we live our daily lives is constantly becoming ever more convenient spurred by new technology. Whether it be researching, communicating, or socializing, technology has made it easy to engage in various activities. In recent years, we have seen the rise of technology used to start movements of ongoing social matters. The most successful of which, were able to amass a high volume of people. This phenomenon underscores that assembling the vast majority for a common purpose and action is imperative to spawn the societal change that we wish to see. However, despite the diverse abundance of websites and applications in existence, the cyberspace lacks a singular platform that enables individuals to unify the masses of other like-minded people in an efficient, organized way to take <em>varying action</em>. Until now.</p>
-	
-	<p>Propcott.com is a web platform that enables the discontent individual to voice his/her opinions and easily take action on a grand scale. Propcott.com is available for anyone to utilize by mobilizing mass group efforts of like-minded individuals to target any given entity <em>for any</em> reason. Instead of quitting our day jobs to horde the streets in protest, we can unite and take action even from the comfort of our own homes. Propcott.com’s unique approach lays out simple, specific, and easy-to-understand fields/guidelines to either initiate or join. Once the propcott is filled out properly, the creator can share and garner like-minded individuals for this cause..Everyone who wants to support and partake in the cause can join simply by signing and adhering to the clear simple instructions set by the creator of the propcott. So start, join, explore, and take collective, varying, action on propcott.com</p>
-	
-	<p style="font-style: italic;">Propcott.com strives to empower the consumer.</p>
+<h2>What is Propcott.com?</h2>
+<p>Propcott.com aims to provide any discontent indvidual with the platform to start or join a boycotting campaign with unparalleled ease.</p>
+
+<h2>What are Propcotts?</h2>
+<p>Propcotts are the reinventions of boycotts. By grasping the fundamental principle of boycotts, which is to combine and abstain from a given entity, propcotts break down the most important aspects into a few simple sections (Who, What, Why, How) so that users who are seeking to start a propcott can get the campaign off the ground promptly while those considering joining a Propcott can quickly understand what the Propcott is all about.</p>
+
+<h2>How to Propcott?</h2>
+<ul>
+	<li>Start a Propcott Campaign by clicking "Start a Propcott" at the top of the page and filling out the five fields listed.</li>
+	<li>Join a Propcott by clicking "Join" on the left side of the page after reading through the propcott.</li>
+</ul>
+
+<h1>Tips for Propcott Creators</h1>
+
+<h2>Set and simplify</h2>
+<p>Remember that when you start a propcott, you set the terms for how others can take part. Try to make your propcott as simple as possible so people can understand and take action with ease.</p>
+
+<h2>Share</h2>
+<p>The power of social media is no secret. Share your propcott page on all social networks available to you and encourage your friends/followers to spread the word.</p>
+
+<h2>Monitor and Keep track</h2>
+After you publish your propcott, utilize our variety of tools to monitor and keep track of your propcott.v
+
+<h2>Communicate</h2>
+<p>Chat and engage in dialogue with your supporters by posting updates and by commenting through the Facebook plugin.</p>
+
+<h2>Do's</h2>
+<ul>
+	<li>Explain HOW to boycott with specific simple words and phrases</li>
+	<li>Put yourself in supporters shoes. Would this be an easy task to undertake?</li>
+</ul>
+
+<h2>Dont's</h2>
+<ul>
+	<li>Don't simply say "boycott" in the "How" section. Explain how to. For example, in order to boycott a food and beverage conglomerate, list out the company's 3 best selling products for others to avoid.</li>
+	<li>Don't lie. Be honest with your information, sources, and most importantly, your purpose.</li>
+</ul>
+___________________________________________________________________
+
+<h1>Tips for Propcotters</h1>
+
+<h2>Trust</h2>
+<p>Trust your fellow propcotters will take action alongside you for the duration of the campaign.</p>
+<p>Trust that Propcott.com will work tirelessly to help all Propcott campaigns achieve their goal.</p>
+
+<h2>Discipline</h2>
+<p>Combining to abstain from something is not always easy. But just remember why you're doing it and what you're doing it for. Keep the end goal in mind. If you want periodical reminders, click here to edit your notification settings.</p>
+
+<h2>Patience</h2>
+<p>Change doesn't happen overnight. But with patience and persistence, you can make a difference.</p>
+
+<h2>Broadcast</h2>
+<p>Spread the word! Inform friends and family about the campaign and take action together along with your fellow propcotters.</p>
+
+</div>
+</div>
+</div>
 </div>
 {% endblock %}
