--- a/app/views/base.html
+++ b/app/views/base.html
@@ -152,6 +152,7 @@
 	}
 	h1, h2, h3, h4, h5, h6 {
 		text-transform: none;
+		margin-top: 0;
 	}
 	.dropdown {
 		position: relative;
@@ -473,7 +474,7 @@
 		vertical-align: text-bottom;
 	}
 
-	h1, #propcott-title {
+	#propcott-title {
 		display: block;
 		color: white;
 		background: rgba(0,0,0,0.85);
