--- a/app/views/propcott/draft.html
+++ b/app/views/propcott/draft.html
@@ -97,7 +97,7 @@
 		<div class="col-7 push-5">
 			<div id="propcott" class="propcott-full">
 				<div id="propcott-featured-image">
-					<h1 style="font-size: {{ propcott.title_size }}">{{ propcott.title }}</h1>
+					<h1 id="propcott-title" style="font-size: {{ propcott.title_size }}">{{ propcott.title }}</h1>
 				</div>
 				<div id="propcott-content">
 					{% if propcott.creator %}
