--- a/app/views/static/about.html
+++ b/app/views/static/about.html
@@ -3,68 +3,74 @@
 {% block title %}About Propcott{% endblock %}
 
 {% block content %}
+<style>
+.left-pane {
+	max-width: 250px;
+	float: left;
+	padding: 1em 0;
+	position: relative;
+}
+.right-pane {
+	overflow: hidden;
+	position: relative;
+	z-index: 1;
+}
+.content {
+	border-radius: 10px;
+	padding: 1em;
+	margin-bottom: 1em;
+	background: white;
+}
+.left-nav {
+    font-family: 'Josefin Sans',sans-serif;
+    list-style: none;
+    padding: 0;
+    float: left;
+    text-align: right;
+    margin-top: 3px;
+    line-height: 1;
+}
+.left-nav a {
+    border-right: 3px solid #E77E8A;
+    padding: .75em .5em;
+    display: inline-block;
+    transition: 150ms linear;
+    font-size: 1.1em;
+    position: relative;
+    left: 3px;
+}
+.left-nav .active a {
+	left: 0;
+}
+.left-nav a:hover {
+	text-decoration: none;
+	left: 0;
+}
+</style>
 <div class="container" style="margin-top: 1em;">
-	<div class="row">
-		<div class="col-12" style="vertical-align: top;">
-			<div style="border-radius: 10px; padding: 1em; margin-bottom: 1em; background: white;">
-<h1>About</h1>
+	<div class="left-pane">
+		<ul class="left-nav">
+			<li class="active"><a href="/about">About Propcott</a></li>
+			<li><a href="/creator-tips">Tips for Propcott Creators</a></li>
+			<li><a href="/supporter-tips">Tips for Propcotters</a></li>
+		</ul>
+	</div>
+	<div class="right-pane">
+		<div class="content">
+			<h1>About</h1>
 
-<h2>What is Propcott.com?</h2>
-<p>Propcott.com aims to provide any discontent indvidual with the platform to start or join a boycotting campaign with unparalleled ease.</p>
+			<h2>What is Propcott.com?</h2>
+			<p>Propcott.com aims to provide any discontent indvidual with the platform to start or join a boycotting campaign with unparalleled ease.</p>
 
-<h2>What are Propcotts?</h2>
-<p>Propcotts are the reinventions of boycotts. By grasping the fundamental principle of boycotts, which is to combine and abstain from a given entity, propcotts break down the most important aspects into a few simple sections (Who, What, Why, How) so that users who are seeking to start a propcott can get the campaign off the ground promptly while those considering joining a Propcott can quickly understand what the Propcott is all about.</p>
+			<h2>What are Propcotts?</h2>
+			<p>Propcotts are the reinventions of boycotts. By grasping the fundamental principle of boycotts, which is to combine and abstain from a given entity, propcotts break down the most important aspects into a few simple sections (Who, What, Why, How) so that users who are seeking to start a propcott can get the campaign off the ground promptly while those considering joining a Propcott can quickly understand what the Propcott is all about.</p>
 
-<h2>How to Propcott?</h2>
-<ul>
-	<li>Start a Propcott Campaign by clicking "Start a Propcott" at the top of the page and filling out the five fields listed.</li>
-	<li>Join a Propcott by clicking "Join" on the left side of the page after reading through the propcott.</li>
-</ul>
-
-<h1>Tips for Propcott Creators</h1>
-
-<h2>Set and simplify</h2>
-<p>Remember that when you start a propcott, you set the terms for how others can take part. Try to make your propcott as simple as possible so people can understand and take action with ease.</p>
-
-<h2>Share</h2>
-<p>The power of social media is no secret. Share your propcott page on all social networks available to you and encourage your friends/followers to spread the word.</p>
-
-<h2>Monitor and Keep track</h2>
-After you publish your propcott, utilize our variety of tools to monitor and keep track of your propcott.v
-
-<h2>Communicate</h2>
-<p>Chat and engage in dialogue with your supporters by posting updates and by commenting through the Facebook plugin.</p>
-
-<h2>Do's</h2>
-<ul>
-	<li>Explain HOW to boycott with specific simple words and phrases</li>
-	<li>Put yourself in supporters shoes. Would this be an easy task to undertake?</li>
-</ul>
-
-<h2>Dont's</h2>
-<ul>
-	<li>Don't simply say "boycott" in the "How" section. Explain how to. For example, in order to boycott a food and beverage conglomerate, list out the company's 3 best selling products for others to avoid.</li>
-	<li>Don't lie. Be honest with your information, sources, and most importantly, your purpose.</li>
-</ul>
-___________________________________________________________________
-
-<h1>Tips for Propcotters</h1>
-
-<h2>Trust</h2>
-<p>Trust your fellow propcotters will take action alongside you for the duration of the campaign.</p>
-<p>Trust that Propcott.com will work tirelessly to help all Propcott campaigns achieve their goal.</p>
-
-<h2>Discipline</h2>
-<p>Combining to abstain from something is not always easy. But just remember why you're doing it and what you're doing it for. Keep the end goal in mind. If you want periodical reminders, click here to edit your notification settings.</p>
-
-<h2>Patience</h2>
-<p>Change doesn't happen overnight. But with patience and persistence, you can make a difference.</p>
-
-<h2>Broadcast</h2>
-<p>Spread the word! Inform friends and family about the campaign and take action together along with your fellow propcotters.</p>
-
-</div>
-</div>
-</div>
+			<h2>How to Propcott?</h2>
+			<ul>
+				<li>Start a Propcott Campaign by clicking "Start a Propcott" at the top of the page and filling out the five fields listed.</li>
+				<li>Join a Propcott by clicking "Join" on the left side of the page after reading through the propcott.</li>
+			</ul>
+		</div>
+	</div>
 </div>
 {% endblock %}
