--- a/app/views/base.html
+++ b/app/views/base.html
@@ -526,6 +526,10 @@
 	#propcott-media {
 		margin-right: 0;
 	}
+	#propcott-how li, #propcott-alt li {
+		line-height: 1.5;
+		margin-bottom: 0.75em;
+	}
 	</style>
 	<noscript>
 		<style type="text/javascript">
