--- a/app/views/search.html
+++ b/app/views/search.html
@@ -106,31 +106,19 @@
 	<div class="row">
 		<div class="col-12" style="vertical-align: top;">
 			<div style="border-radius: 10px; padding: 1em; margin-bottom: 1em; background: white;">
-				<div class="explore-navigation">
-					<div class="tabs">
-						<a href="/explore/daily"{% if tab == 'hot' %} class="active"{% endif %}>Hot</a>
-						<a href="/explore"{% if tab == 'new' %} class="active"{% endif %}>New</a>
-					</div>
-					{% if subtab %}
-					<div class="tabs subtabs">
-						<a href="/explore/daily"{% if subtab == 'daily' %} class="active"{% endif %}>Today</a>
-						<a href="/explore/weekly"{% if subtab == 'weekly' %} class="active"{% endif %}>This Week</a>
-						<a href="/explore/monthly"{% if subtab == 'monthly' %} class="active"{% endif %}>This Month</a>
-						<a href="/explore/all"{% if subtab == 'all' %} class="active"{% endif %}>All Time</a>
-					</div>
-					{% endif %}
-				</div>
-				{% for propcott in propcotts %}
-					<div style="margin-bottom: 1em; clear: both;">
-						<div id="propcott-media" style="margin-right: 1em; float: left; width: 120px; height: 90px; {% if propcott.media_type == 'image' %}background-image: url('http://static.propcott.com/{{ propcott.media_link }}');{% elseif propcott.media_type == 'video' %}background-image: url('http://img.youtube.com/vi/{{ propcott.media_link }}/mqdefault.jpg');{% else %}background-color: #333;{% endif %}"></div>
-						<div style="overflow:hidden; font-size: .9em;">
-							<p style="float: right; text-align: right; line-height: 1.2; margin: 0 0 1em 1em;">Targeting <span style="color:rgb(215,0,0)">{{ propcott.target }}</span><br>
-							<span style="color: rgb(215,0,0);">{{ propcott.support.all }} supporters</span></p>
-							<a href="/p/{{ propcott.slug }}">{{ propcott.title || 'Untitled' }}</a>
-							<p>{{ propcott.goal }}</p>
-						</div>
-					</div>
-				{% endfor %}
+				<script>
+				  (function() {
+				    var cx = '009157398294654063874:u478ee71jci';
+				    var gcse = document.createElement('script');
+				    gcse.type = 'text/javascript';
+				    gcse.async = true;
+				    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+				        '//cse.google.com/cse.js?cx=' + cx;
+				    var s = document.getElementsByTagName('script')[0];
+				    s.parentNode.insertBefore(gcse, s);
+				  })();
+				</script>
+				<gcse:search></gcse:search>
 			</div>
 		</div>
 	</div>
