--- a/app/views/propcott/manage.html
+++ b/app/views/propcott/manage.html
@@ -16,6 +16,7 @@
 				exec: function(editor) {
 					var form = document.createElement('form');
 					form.method = 'POST';
+					form.action = '/p/{{ propcott.slug }}/update';
 
 					(function make(list) {
 						for(var i in list) {
@@ -165,7 +166,7 @@
 		font-weight: bold;
 		margin-top: 0;
 	}
-	</style>
+	f</style>
 {% endblock %}
 
 {% block content %}
@@ -226,7 +227,7 @@
 					<h2 style="font-size: 1.2em; margin: 0; padding: 16px; border-top: 1px solid #eee;">Updates and Announcements</h2>
 					{% for update in propcott.updates %}
 						<div class="propcott-update{% if loop.index == 0 %} first{% endif %}">
-						<div style="color: gray; float: right; font-size: .8em; margin: 0 0 1em 1em;">{{ update.created }}</div>
+						<div style="color: gray; float: right; font-size: .8em; margin: 0 0 1em 1em;"></div>
 							{{ update.content }}
 						</div>
 					{% endfor %}
