--- a/app/views/home.html
+++ b/app/views/home.html
@@ -83,7 +83,7 @@
 	<div class="row">
 		<div class="col-7">
 			<div id="featured">
-				<h2>Boycotts made simple</h2>
+				<h2>Boycotts made simple.</h2>
 				<div class="buttons">
 					<a href="/new">Start a Propcott</a>
 					<a href="/about">Learn More</a>
