--- a/app/views/static/creator-tips.html
+++ b/app/views/static/creator-tips.html
@@ -66,7 +66,7 @@
 			<p>The power of social media is no secret. Share your propcott page on all social networks available to you and encourage your friends/followers to spread the word.</p>
 
 			<h2>Monitor and Keep track</h2>
-			After you publish your propcott, utilize our variety of tools to monitor and keep track of your propcott.v
+			After you publish your propcott, utilize our variety of tools to monitor and keep track of your propcott.
 
 			<h2>Communicate</h2>
 			<p>Chat and engage in dialogue with your supporters by posting updates and by commenting through the Facebook plugin.</p>
