--- a/app/views/home.html
+++ b/app/views/home.html
@@ -133,7 +133,7 @@
 							</div>
 						</div>
 					{% endfor %}
-					<p style="text-align: right;margin-bottom: 0;"><a href="/explore/daily">View more...</a></p>
+					<p style="text-align: right;margin-bottom: 0;"><a href="/explore/monthly">View more...</a></p>
 				</div>
 			</div>
 		</div>
