--- a/app/views/account/general.html
+++ b/app/views/account/general.html
@@ -46,18 +46,25 @@
 		<th>Birthday</th>
 		<td>
 		<select name="birth-month">
-			<option value="1"{% if user.birth_month == 1 %} selected="true"{% endif %}>January</option>
-			<option value="2"{% if user.birth_month == 2 %} selected="true"{% endif %}>February</option>
-			<option value="3"{% if user.birth_month == 3 %} selected="true"{% endif %}>March</option>
-			<option value="4"{% if user.birth_month == 4 %} selected="true"{% endif %}>April</option>
-			<option value="5"{% if user.birth_month == 5 %} selected="true"{% endif %}>May</option>
-			<option value="6"{% if user.birth_month == 6 %} selected="true"{% endif %}>June</option>
-			<option value="7"{% if user.birth_month == 7 %} selected="true"{% endif %}>July</option>
-			<option value="8"{% if user.birth_month == 8 %} selected="true"{% endif %}>August</option>
-			<option value="9"{% if user.birth_month == 9 %} selected="true"{% endif %}>September</option>
-			<option value="10"{% if user.birth_month == 10 %} selected="true"{% endif %}>October</option>
-			<option value="11"{% if user.birth_month == 11 %} selected="true"{% endif %}>November</option>
-			<option value="12"{% if user.birth_month == 12 %} selected="true"{% endif %}>December</option>
+			{% if user.birth_month %}
+			<optgroup label="Selected"><option value="{{ user.birth_month }}">{{ ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'][user.birth_month] }}</option></optgroup>
+			<optgroup label="All Months">
+			{% endif %}
+			<option value="1">January</option>
+			<option value="2">February</option>
+			<option value="3">March</option>
+			<option value="4">April</option>
+			<option value="5">May</option>
+			<option value="6">June</option>
+			<option value="7">July</option>
+			<option value="8">August</option>
+			<option value="9">September</option>
+			<option value="10">October</option>
+			<option value="11">November</option>
+			<option value="12">December</option>
+			{% if user.birth_month %}
+			</optgroup>
+			{% endif %}
 		</select>
 		<input name="birth-year" placeholder="Year" maxlength="4" style="width: 6ex;" onchange="if(/[^d]/.test(this.value)) this.value=this.value.replace(/[^\d]/g,'')" onkeypress="return event.charCode >= 48 && event.charCode <= 57" value="{{ user.birth_year || '' }}">
 		</td>
